@@ -64,11 +64,7 @@ module Devise
         result = if valid_password?(current_password)
           update_attributes(params, *options)
         else
-          if respond_to?(:assign_attributes)
-            self.assign_attributes(params, *options)
-          else
-            self.attributes = params
-          end
+          self.assign_attributes(params, *options)
           self.valid?
           self.errors.add(:current_password, current_password.blank? ? :blank : :invalid)
           false
